--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,9 @@
 {
     "env": {
         "browser": true,
-        "commonjs": true,
         "es6": true
     },
-    "extends": "eslint:recommended",
+    "extends": ["eslint:recommended", "plugin:react/recommended"],
     "parserOptions": {
         "ecmaFeatures": {
             "experimentalObjectRestSpread": true,
@@ -18,7 +17,10 @@
     "rules": {
         "indent": [
             "error",
-            "tab"
+            4,
+            {
+                "SwitchCase": 1
+            }
         ],
         "linebreak-style": [
             "error",
