--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "dompurify": "^3.2.5",
     "firebase": "^11.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
